syntax = "proto3";
import "onboardings/domain/values/v1/message.proto";
package onboardings.api.v1;

message ApprovalsPut {
  string id = 1;
  onboardings.domain.values.v1.Approval approval = 2;
}
message OnboardingsPut {
  string value = 1;
  string deputyOwnerEmail = 2;
}
message OnboardingsGet {
  string id = 1;
  string current_value = 2;
  onboardings.domain.values.v1.Approval approval = 3;
}