syntax = "proto3";

package onboardings.domain.commands.v1;

message RegisterCrmEntityRequest {
  string id = 1;
  string value = 2;
}
message RequestDeputyOwnerRequest {
  string id = 1;
  string deputy_owner_email = 2;
}
message ApproveEntityRequest {
  string comment = 1;
}
message RejectEntityRequest {
  string comment = 1;
}