syntax = "proto3";

import "google/protobuf/timestamp.proto";

package onboardings.domain.workflows.v1;

enum Errors {
  ERRORS_ONBOARD_ENTITY_TIMED_OUT = 0;
  ERRORS_ONBOARD_ENTITY_INVALID_ARGS = 1;
  ERRORS_ONBOARD_ENTITY_REJECTED = 2;
}

message OnboardEntityRequest {
  google.protobuf.Timestamp timestamp = 1;
  string id = 2;
  string value = 3;
  uint64 completion_timeout_seconds = 4;
  string deputy_owner_email = 5;
  bool skip_approval = 6;
}
